#+TITLE: Changelog

* Unreleased

** Added
*** add cljstyle configuration to align with Clojure style and cljfmt formatting in Clojure LSP
*** format deps.edn with cljstyle
** Changed


* 2022-07-09
** Added
*** [[https://github.com/practicalli/clojure-deps-edn/issues/44][#44 Windows and Clojure CLI escape character issues]] - add link to escape quoting section of Clojure CLI documentation
** Changed
*** .github/workflows/lint-with-clj-kondo.yml updated to 2022.05.31
*** Update library versions using `clojure -T:search/outdated`

  | :name                           |   :current |    :latest |
  |---------------------------------+------------+------------|
  | cider/cider-nrepl               |     0.28.4 |     0.28.5 |
  | clj-kondo/clj-kondo             | 2022.05.31 | 2022.06.22 |
  | cljfmt/cljfmt                   |      0.8.0 |      0.8.2 |
  | com.github.liquidz/antq         |    1.7.798 |    1.9.859 |
  | com.github.seancorfield/clj-new |    1.2.381 |    1.2.399 |
  | com.h2database/h2               |    2.1.212 |    2.1.214 |
  | djblue/portal                   |     0.26.0 |     0.28.0 |
  | jonase/eastwood                 |      1.2.3 |      1.2.4 |
  | lambdaisland/kaocha             |  1.66.1034 |  1.68.1059 |
  | nvd-clojure/nvd-clojure         |      2.6.0 |      2.7.0 |
  | refactor-nrepl/refactor-nrepl   |      3.5.2 |      3.5.3 |

* 2022-06-24
** Changed
*** Update `:repl/interactive` and `:repl/headless` aliases with `cider/cider-nrepl` middleware

* 2022-06-18
** Changed
*** Update `:repl/*` aliases to use the `--interactive` option rather than the short `-i` version
*** Update readme to use `:search/outdated` and `:search/outdated-mvn` aliases

* 2022-06-11
** Resolved
*** #48 - provide `:mvn/local-repo` as an example only - ideally requires full path

* 2022-06-06
** Added
*** aliases section keys documentation

** Changed